--- a/index.html
+++ b/index.html
@@ -1,43 +1,43 @@
 <!doctype html>
 <html class="no-js" lang="es">
 <head>
-   <meta charset="utf-8">
+      <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-   <meta name="description" content="Diseñador y Programador Web">
-    <meta name="author" content="Carlos Andrés Viteri">
+   <meta name="description" content="DiseÃ±ador y Programador Web">
+    <meta name="author" content="Carlos Andrï¿½s Viteri">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-   <title>Carlos Andrés Viteri</title>
-   <script src="js/modernizr-2.5.3.js"></script>
+   <title>CÃ©sar Oyarzo MuÃ±oz</title>
+   <link href='http://fonts.googleapis.com/css?family=Marko+One' rel='stylesheet' type='text/css'>
    <link rel="stylesheet" type="text/css" href="css/style.css">
+   <script src="js/modernizr-2.5.3.js"></script>
+   <script src="js/prefixfree.min.js"></script>
 </head>
 <body>
     <article class="acordion">  
         <section id="ac1" class="ac1">  
-            <h2><a href="#ac1">Carlos Andrés Viteri</a></h2> 
-            <p>Soy un chico de 14 años, aficionado al diseño y la programación web, vivo en Quito-Ecuador,
-            tengo experiencia con HTML5, CSS3, jQuery, aprendo PHP. Me gusta mucho el diseño gráfico.</p>  
+            <h2><a href="#ac1">CÃ©sar Oyar   zo MuÃ±oz</a></h2> 
+            <p>Soy un estudiante aficionado al Desarrollo web, 
+            tengo experiencia con HTML5, CSS3, jQuery, aprendo PHP.</p>  
             <img src="http://www.w3.org/html/logo/badge/html5-badge-h-connectivity-css3-device-graphics-multimedia-performance-semantics-storage.png" width="357" height="64" alt="HTML5 Powered with Connectivity / Realtime, CSS3 / Styling, Device Access, Graphics, 3D &amp; Effects, Multimedia, Performance &amp; Integration, Semantics, and Offline &amp; Storage" title="HTML5 Powered with Connectivity / Realtime, CSS3 / Styling, Device Access, Graphics, 3D &amp; Effects, Multimedia, Performance &amp; Integration, Semantics, and Offline &amp; Storage" id="logohtml5">
         </section>  
         <section id="ac2" class="ac2">  
             <h2><a href="#ac2">Portfolio</a></h2>  
             <p>Algunos de mis trabajos:</p> 
             <img src="http://carlosandresviteri.com/images/website.jpg" width="165" alt="Website" class="website">
-            <img src="http://carlosandresviteri.com/images/website.jpg" width="165" alt="Website" class="website">
-            <img src="http://carlosandresviteri.com/images/website.jpg" width="165" alt="Website" class="website"> 
-            <img src="http://carlosandresviteri.com/images/website.jpg" width="165" alt="Website" class="website">
+           
         </section>  
         <section id="ac3" class="ac3">  
             <h2><a href="#ac3">Redes Sociales</a></h2> 
-            <a href="http://www.facebook.com/carlosssasd" target="_blank"><aside>
+            <a href="https://www.facebook.com/zesario.antonyo" target="_blank"><aside>
             <img src="images/facebook.png" alt="facebook" class="imagenessinborde"><p class="redes">Facebook</p>
             </aside></a>
-            <a href="http://www.twitter.com/carlosssasd" target="_blank"><aside>
+            <a href="http://www.twitter.com/tinguinito" target="_blank"><aside>
             <img src="images/twitter.png" alt="twitter" class="imagenessinborde"><p class="redes">Twitter</p>  
             </aside></a>
         </section>  
         <section id="ac4">  
             <h2><a href="#ac4">Contacto</a></h2>
-            <p>Contáctate conmigo te responderé lo más pronto posible. <br><span>*Llena todos los campos*</span></p>  
+            <p>Contï¿½ctate conmigo te responderï¿½ lo mï¿½s pronto posible. <br><span>*Llena todos los campos*</span></p>  
             <form> 
             <input type="text" placeholder="nombre y apellido" id="name">
             <input type="text" placeholder="email" id="email">
